@@ -3,6 +3,7 @@
 - Feature: [#18537] Add shift/control modifiers to window close buttons, closing all but the given window or all windows of the same type, respectively.
 - Feature: [#18732] [Plugin] API to get the guests thoughts.
 - Feature: [#18744] Cheat to allow using a regular path as a queue path.
+- Improved: [#18749] Ability to have 4 active awards for more than one month in a row. 
 - Improved: [#18826] [Plugin] Added all actions and their documentation to plugin API.
 - Fix: [#18467] “Selected only” Object Selection filter is active in Track Designs Manager, and cannot be toggled.
 - Fix: [#18905] Ride Construction window theme is not applied correctly.
